# skema

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindLAPACKE.cmake
driver/: convert.cpp  main.cpp  performance.cpp
include/: lapack_headers.h
src/: AlgParams.cpp  Common.h  Dense_FDISVD.cpp  Dense_FDISVD.h  Dense_MatrixMatvec.cpp  Dense_Sampler.h  Dense_Sparse_MatrixMatvec.cpp  Dense_Sparse_MatrixMatvec.h  DimRedux.h  Kernel_EIGS.cpp  Kernel_FDISVD.h  Kernel_SketchySVD.h  MatrixMatvec.h  Skema_AlgParams.cpp  Skema_AlgParams.h  Skema_AlgParams.hpp  Skema_BlasLapack.hpp  Skema_Common.hpp  Skema_Dense_MatrixMatvec.h  Skema_Dense_SketchySVD.cpp  Skema_Dense_SketchySVD.h  Skema_DimRedux.cpp  Skema_DimRedux.hpp  Skema_DimRedux_Gauss.cpp  Skema_DimRedux_SparseSign.cpp  Skema_EIGSVD.cpp  Skema_EIGSVD.hpp  Skema_EIGSVD_MatrixMatvec.cpp  Skema_EIGSVD_MatrixMatvec.hpp  Skema_IO.cpp  Skema_IO.hpp  Skema_ISVD.cpp  Skema_ISVD.hpp  Skema_ISVD_MatrixMatvec.cpp  Skema_ISVD_MatrixMatvec.hpp  Skema_ISVD_Primme.cpp  Skema_ISVD_Primme.hpp  Skema_Kernel.cpp  Skema_Kernel.h  Skema_Kernel.hpp  (+23 more)
src/matlab/: GaussianKernel.m  Kernel.m  stream.m  stream_exact.m  stream_kernel.m  stream_svds.m  tile_matvec.m
test/: stream_res.m  test.m
test/data/: kernel_data.txt  kernel_svals.txt  rectangular_dense.txt  rectangular_sparse.mtx  rectangular_svals.txt  symmetric_dense.txt  symmetric_sparse.mtx  symmetric_svals.txt
